# visualgdb_cmake_cubemx

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  cdc.gpdsc  cdc.ioc  cdc.sln  cdc.vgdbcmake
.visualgdb/CodeDB/cdc.vgdbcmake-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  codedb.lck  main.npa00  main.npd  main.rdb
.visualgdb/VisualGDBCache/cdc-Debug-VisualGDB/: MemoryUtilizationReport.xml  UpToDateChecklist.db
.visualgdb/VisualGDBCache/cdc-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-6d817de3470f28fc2e52.json  cmakeFiles-v1-afa612975c308b3b0394.json  codemodel-v2-bcd899bbbc4eb241862f.json  index-2020-10-09T09-55-46-0235.json  target-BSP-DEBUG-4a980365c7e37d29621f.json  target-cdc-DEBUG-768dd80c864509d11a4c.json  target-cdc-bin-DEBUG-2cb32e7c0133969f6ea1.json
Inc/: stm32f4xx_hal_conf.h  usbd_conf.h
Src/: gpio.c  main.c
